--- a/html/index.html
+++ b/html/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" type="text/css" href="./index.css">
+    <link rel="stylesheet" type="text/css" href="../css/index.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>The GUIDON Interactive Articles</title>
 </head>
@@ -12,7 +12,7 @@
         <div class="overlay"></div>
     </div>
     <!-- main header section -->
-    <header class="header-section">
+    <header class="section" id="header">
 
         <!-- header wrapper; flex -->
         <div class="center-wrapper">
@@ -21,7 +21,7 @@
             <div class="left-side">
                 <!-- left-side flex child -->
                 <a id="logo-wrapper" href="#">
-                    <img src="./guidon-logo.png" alt="guidon-logo">
+                    <img src="./img/logo.png" alt="guidon-logo">
                 </a>
             </div>
 
@@ -30,17 +30,209 @@
             <nav class="right-side" id="nav-wrapper">
                 <a class="nav-link">Home</a>
                 <a class="nav-link">About</a>
-                <a class="nav-link">TheGuidon.com</a>
+                <a class="nav-link">theguidon.com</a>
             </nav>
         </div>
     </header>
     <!-- section -->
-    <section class="content-wrapper">
+    <section class="section">
         <!-- center wrapper -->
         <div class="center-wrapper">
-            <!-- interactives wrapper; flex -->
+            <!-- interactives wrapper; flex; image from Cherish Magpayo -->
             <div class="interactive-card-wrapper"> 
                 <!-- card-item -->
+                <a class="card-item" href="#">
+                    <!-- img -->
+                    <div class="card-img"></div>
+                    <!-- title -->
+                    <div class="info">
+                        <div class="text">Placeholder Text Heraaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaae</div>
+                    </div>
+                </a>
+                <a class="card-item" href="#">
+                    <!-- img -->
+                    <div class="card-img"></div>
+                    <!-- title -->
+                    <div class="info">
+                        <div class="text">Placeholder Text Here</div>
+                    </div>
+                </a>
+                <a class="card-item" href="#">
+                    <!-- img -->
+                    <div class="card-img"></div>
+                    <!-- title -->
+                    <div class="info">
+                        <div class="text">Placeholder Text Here</div>
+                    </div>
+                </a>
+                <a class="card-item" href="#">
+                    <!-- img -->
+                    <div class="card-img"></div>
+                    <!-- title -->
+                    <div class="info">
+                        <div class="text">Placeholder Text Here</div>
+                    </div>
+                </a>
+                <a class="card-item" href="#">
+                    <!-- img -->
+                    <div class="card-img"></div>
+                    <!-- title -->
+                    <div class="info">
+                        <div class="text">Placeholder Text Here</div>
+                    </div>
+                </a>
+                <a class="card-item" href="#">
+                    <!-- img -->
+                    <div class="card-img"></div>
+                    <!-- title -->
+                    <div class="info">
+                        <div class="text">Placeholder Text Here</div>
+                    </div>
+                </a>
+                <a class="card-item" href="#">
+                    <!-- img -->
+                    <div class="card-img"></div>
+                    <!-- title -->
+                    <div class="info">
+                        <div class="text">Placeholder Text Here</div>
+                    </div>
+                </a>
+                <a class="card-item" href="#">
+                    <!-- img -->
+                    <div class="card-img"></div>
+                    <!-- title -->
+                    <div class="info">
+                        <div class="text">Placeholder Text Here</div>
+                    </div>
+                </a>
+                <a class="card-item" href="#">
+                    <!-- img -->
+                    <div class="card-img"></div>
+                    <!-- title -->
+                    <div class="info">
+                        <div class="text">Placeholder Text Here</div>
+                    </div>
+                </a>
+                <a class="card-item" href="#">
+                    <!-- img -->
+                    <div class="card-img"></div>
+                    <!-- title -->
+                    <div class="info">
+                        <div class="text">Placeholder Text Here</div>
+                    </div>
+                </a>
+                <a class="card-item" href="#">
+                    <!-- img -->
+                    <div class="card-img"></div>
+                    <!-- title -->
+                    <div class="info">
+                        <div class="text">Placeholder Text Here</div>
+                    </div>
+                </a>
+                <a class="card-item" href="#">
+                    <!-- img -->
+                    <div class="card-img"></div>
+                    <!-- title -->
+                    <div class="info">
+                        <div class="text">Placeholder Text Here</div>
+                    </div>
+                </a>
+                <a class="card-item" href="#">
+                    <!-- img -->
+                    <div class="card-img"></div>
+                    <!-- title -->
+                    <div class="info">
+                        <div class="text">Placeholder Text Here</div>
+                    </div>
+                </a>
+                <a class="card-item" href="#">
+                    <!-- img -->
+                    <div class="card-img"></div>
+                    <!-- title -->
+                    <div class="info">
+                        <div class="text">Placeholder Text Here</div>
+                    </div>
+                </a>
+                <a class="card-item" href="#">
+                    <!-- img -->
+                    <div class="card-img"></div>
+                    <!-- title -->
+                    <div class="info">
+                        <div class="text">Placeholder Text Here</div>
+                    </div>
+                </a>
+                <a class="card-item" href="#">
+                    <!-- img -->
+                    <div class="card-img"></div>
+                    <!-- title -->
+                    <div class="info">
+                        <div class="text">Placeholder Text Here</div>
+                    </div>
+                </a>
+                <a class="card-item" href="#">
+                    <!-- img -->
+                    <div class="card-img"></div>
+                    <!-- title -->
+                    <div class="info">
+                        <div class="text">Placeholder Text Here</div>
+                    </div>
+                </a>
+                <a class="card-item" href="#">
+                    <!-- img -->
+                    <div class="card-img"></div>
+                    <!-- title -->
+                    <div class="info">
+                        <div class="text">Placeholder Text Here</div>
+                    </div>
+                </a>
+                <a class="card-item" href="#">
+                    <!-- img -->
+                    <div class="card-img"></div>
+                    <!-- title -->
+                    <div class="info">
+                        <div class="text">Placeholder Text Here</div>
+                    </div>
+                </a>
+                <a class="card-item" href="#">
+                    <!-- img -->
+                    <div class="card-img"></div>
+                    <!-- title -->
+                    <div class="info">
+                        <div class="text">Placeholder Text Here</div>
+                    </div>
+                </a>
+                <a class="card-item" href="#">
+                    <!-- img -->
+                    <div class="card-img"></div>
+                    <!-- title -->
+                    <div class="info">
+                        <div class="text">Placeholder Text Here</div>
+                    </div>
+                </a>
+                <a class="card-item" href="#">
+                    <!-- img -->
+                    <div class="card-img"></div>
+                    <!-- title -->
+                    <div class="info">
+                        <div class="text">Placeholder Text Here</div>
+                    </div>
+                </a>
+                <a class="card-item" href="#">
+                    <!-- img -->
+                    <div class="card-img"></div>
+                    <!-- title -->
+                    <div class="info">
+                        <div class="text">Placeholder Text Here</div>
+                    </div>
+                </a>
+                <a class="card-item" href="#">
+                    <!-- img -->
+                    <div class="card-img"></div>
+                    <!-- title -->
+                    <div class="info">
+                        <div class="text">Placeholder Text Here</div>
+                    </div>
+                </a>
                 <a class="card-item" href="#">
                     <!-- img -->
                     <div class="card-img"></div>
